--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ function MM_swapImage() { //v3.0
     </li>
    <li class="ui-firs-child ui-last-child">
    <a href="#Pagina2" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-   <h2> Domingo de Pauscua </h2>
+   <h2> Domingo de Pascua </h2>
    <p> Se muestra informacion del Domingo de Pauscua</p>
    </a>
    </li>
@@ -202,12 +202,12 @@ El Viernes Santo es, fundamentalmente, un día de duelo durante el cual se recue
 <div data-role="page" id="Pagina2" data-add-back-btn="true" data-theme="b">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a" 
    <center>
-   <h1>Domingo de Pauscua</h1>
+   <h1>Domingo de Pascua</h1>
 </div>
    </center>
 <div data-role="content" align="justify">
    <div>
-   <h2> ¿Que es pauscua? </h2>
+   <h2> ¿Que es pascua? </h2>
    <p>Pascua es la celebración más importante de la Iglesia Cristiana, donde se conmemora la Resurrección de Jesucristo al tercer día después de haber sido crucificado, según los evangelios canónicos. El término Pascua proviene del latín "páscae", que a su vez proviene del griego "πάσχα" (pasjua), una adaptación del hebreo "פסח" (pésaj), que significa "paso" o "salto".
 
 La Pascua forma parte de la Semana Santa donde en el "Viernes Santo" se celebra la crucifixión de Jesús, y en el "Domingo de Pascua" se celebra la Resurrección y su primera aparición a sus discípulos.<p>
@@ -216,14 +216,14 @@ La Pascua forma parte de la Semana Santa donde en el "Viernes Santo" se celebra 
 <img src="imagenes/semanasanta2.1.jpg" width="250" height="250">
 </center>
 <br>
-<h2> El domingo de Pauscua </h2>
+<h2> El domingo de Pascua </h2>
 <p> es una fiesta móvil, el día varía cada año y no se fija en relación al calendario civil, y sucede después de la primera luna llena en el inicio de la primavera en el hemisferio Norte. La Pascua siempre se celebra entre el 22 de Marzo y el 25 de Abril, se celebra en varios países y en cada uno posee un nombre diferente, como por ejemplo: los portugueses la llaman Páscoa, los italianos la llaman Pasqua, y los franceses Pâques.
 
 El término de Pascua remite principalmente a la fiesta de la Resurrección, que también es llamada a veces Pascua florida, pero también se usa para referirse a otras tres celebraciones cristianas: la Navidad (25 de Diciembre), la Epifanía o Adoración de los Magos (6 de Enero) y Pentecostés, la venida del Espíritu Santo (cincuenta días después de la Resurrección). </p>
 <br>
 <div data-role="main" class="ui-content">
     <div data-role="collapsible" data-content-theme="false">
-      <h1>Simbolo de la Pauscua</h1>
+      <h1>Simbolo de la Pascua</h1>
       <div>
       <p>Uno de los símbolos de la Pascua es el conejo. Este animal se convirtió en un símbolo porque en la antigüedad, en el hemisferio Norte, la celebración fue precisamente a finales del invierno y principios de la primavera, cuando los animales aparecían en los campos con sus cachorros, era la época de la fertilidad.
 
@@ -349,7 +349,7 @@ Agregó que Atlixco cuenta con servicios turísticos, una gran infraestructura h
   <br> 
   <br>
   <h2>
-  Domingo de ramos en Atlizco </h2>
+  Domingo de ramos en Atlixco </h2>
   <p> Atlixco Pue.- Dentro de las celebraciones que se realizan en Atlixco con motivo de la semana santa, se realizan procesiones importantes como los engrillados, y la procesión del silencio en Santa Lucia Cosamaloapan  donde miles de personas asisten a este municipio.</p>
   <center>
   <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image28','','imagenes/semanasanta4.6.jpg',1)"><img src="imagenes/cartelSS.jpg" width="250" height="250" id="Image28"></a><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image29','','imagenes/semanasanta4.4.jpg',1)"><img src="imagenes/cartelSS.jpg" width="250" height="250" id="Image29"></a></p>
